app/contact/contact.module.css
/* contact.module.css */

.header {
  background: linear-gradient(to bottom, #623a89, rgb(169, 113, 119), black);
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 200px;
  color: white;
  padding-top: 150px;
  margin-bottom: 5%;
}

.header h1 {
  font-size: 2.5rem;
  font-weight: bold;
  margin-bottom: 0.5rem;
}

.header p {
  font-size: 1rem;
  opacity: 0.8;
}

.container {
  display: flex;
  padding: 2rem;
  color: white;
}

.formCardBox {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  max-width: 1200px;
  margin: auto;
}

.formContainer {
  flex: 1;
  min-width: 300px;
  margin-right: 2rem;
  padding: 2rem;
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 12px;
  box-shadow: 0 0 15px rgba(177, 90, 255, 0.3);
}

.formContainer h2 {
  margin-bottom: 1.5rem;
  font-size: 1.2rem;
}

.formCard {
  border: 1px solid rgba(255, 255, 255, 0.2);
  padding: 2rem;
  border-radius: 16px;
  box-shadow: 0 0 20px rgba(177, 90, 255, 0.3);
  max-width: 500px;
  width: 100%;
  color: white;
}

.formCard h2 {
  margin-bottom: 1.5rem;
  font-size: 1.2rem;
}

.row {
  display: flex;
  gap: 1rem;
  flex-wrap: wrap;
}

.inputGroup {
  flex: 1;
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
}

.label {
  font-size: 0.9rem;
  margin-bottom: 0.4rem;
}

.input,
.textarea {
  padding: 0.6rem 1rem;
  border: 1px solid white;
  border-radius: 20px;
  background: transparent;
  color: white;
  outline: none;
}

.textarea {
  height: 120px;
  border-radius: 16px;
  resize: none;
}

.button {
  display: block;
  margin: 1rem auto 0;
  padding: 0.7rem 2rem;
  border: none;
  border-radius: 20px;
  background: linear-gradient(to right, #a64ac9, #7b2ff7);
  color: white;
  font-weight: bold;
  cursor: pointer;
  transition: background 0.3s ease;
}

.button:hover {
  background: linear-gradient(to right, #7b2ff7, #a64ac9);
}

.contactInfo {
  flex: 1;
  min-width: 250px;
  margin: auto;
  justify-items: center;
}

.contactInfo h3 {
  font-size: 1.2rem;
  margin-bottom: 1rem;
}

.contactInfo p {
  margin: 0.5rem 0;
}

.map {
  margin-top: 1rem;
  border: 1px solid #555;
  overflow: hidden;
  width: 100%;
  height: auto;
  max-width: 400px;
}

/* Mobile */
@media (max-width: 768px) {
  .container {
    flex-direction: column;
    padding: 1rem;
  }

  .formContainer,
  .contactInfo {
    padding: 1.5rem 1rem;
  }

  .formContainer {
    margin-bottom: 2rem;
  }

  .header h1 {
    font-size: 2rem;
  }

  .row {
    flex-direction: column;
  }

  .formCardBox {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    max-width: 1200px;
    margin: auto;
  }
}

